--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@tabler/icons-react": "^3.12.0",
+    "axios": "^1.7.5",
+    "class-variance-authority": "^0.7.0",
+    "client": "file:",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.29",
+    "lucide-react": "^0.429.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-day-picker": "^9.0.8",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
+    "redux-persist": "^6.0.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@types/node": "^22.5.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-infinite-calendar": "^2.3.9",
+    "@types/redux-persist": "^4.0.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.8.0",
