--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 VITE_WEATHER_API="d32c0a1e9530f48fd2392b5e21df2e6e"
 # VITE_SERVER_URL="http://localhost:8000/api/v1"
-VITE_SERVER_URL="https://todo-app-63zb.onrender.com/"
+VITE_SERVER_URL="https://todo-app-63zb.onrender.com"
